fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 
-.column {
+.headpic {
   display: flex;
   justify-content: center;
 }
